--- a/templates/index.html
+++ b/templates/index.html
@@ -2,10 +2,12 @@
 <html>
 <head>
 	<title>MicroNode</title>
-	<link rel="stylesheet" href="../../css/styles.css">
+	<link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
 	<h1>Title</h1>
 	<article>stuff goes here</article>
+
+	<script type="text/javascript" src="/js/main.js"></script>
 </body>
 </html>
